# mesh-to-sim-asset

./: .gitignore  LICENSE  README.md  make_asset_drake_compatible.py  pyproject.toml
RoLoPoly/: README.md
mesh_to_sim_asset/: canonicalize.py  make_asset_drake_compatible.py  mesh_conversion.py  physics.py  sdformat.py  usd_to_sdf.py
mesh_to_sim_asset/data/: composed_physics_system_prompt.txt  physics_system_prompt.txt  studio.blend
